# phd-copo

./: .gitignore  README.md  docs_semantic_methodology.md  pyproject.toml  requirements.txt  streamlit_app.py
copo_mapper/: __init__.py  attainment.py  attainment_cli.py  cli.py  features.py  io_utils.py  pipeline.py  preprocess.py  scoring.py  semantic.py  types.py
examples/: attainment_config.csv  attainment_config.json  co.csv  co.json  co_attainment.csv  co_attainment.json  co_attainment_template.csv  co_large.csv  co_large.json  mapping_matrix.csv  po.csv  po.json  po_large.csv  po_large.json
tests/: test_attainment.py  test_dynamic_sizes.py  test_encoding.py  test_semantic.py  test_smoke.py
