[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copo-mapper"
version = "0.1.0"
description = "Pairwise CO-PO mapping baseline with educational feature engineering"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Codex" }]
dependencies = []

[project.optional-dependencies]
ui = ["streamlit>=1.30"]
sbert = ["sentence-transformers>=3.0"]

[project.scripts]
copo-map = "copo_mapper.cli:main"
copo-attainment = "copo_mapper.attainment_cli:main"

[tool.setuptools.packages.find]
include = ["copo_mapper*"]
